--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Sample App</title>
   </head>
-  <body>
+  <body style='margin:0;'>
     <div id='root'>
     </div>
     <script src="/static/bundle.js"></script>
